Add button to generate sample data in backend (#56)
Co-authored-by: Alexandru-Paul Sîrbu <alexandru.sirbu2104@gmail.com>