@@ -1,8 +1,16 @@
 package cloudflight.integra.backend.controller;
 
 import cloudflight.integra.backend.BackendApplication;
+import cloudflight.integra.backend.model.Dish;
+import cloudflight.integra.backend.model.Ingredient;
+import cloudflight.integra.backend.model.Recipe;
+import cloudflight.integra.backend.model.dtos.DishDto;
 import cloudflight.integra.backend.model.dtos.MealDto;
 import cloudflight.integra.backend.model.MealType;
+import cloudflight.integra.backend.repository.DishRepository;
+import cloudflight.integra.backend.repository.IngredientRepository;
+import cloudflight.integra.backend.repository.MealRepository;
+import cloudflight.integra.backend.repository.RecipeRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,11 +20,15 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.testcontainers.service.connection.ServiceConnection;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.MvcResult;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -38,16 +50,74 @@ public class MealDtoControllerTests {
     @Autowired
     private ObjectMapper objectMapper;
 
+    @Autowired
+    private DishRepository dishRepository;
+
+    @Autowired
+    private RecipeRepository recipeRepository;
+
+    @Autowired
+    private IngredientRepository ingredientRepository;
+
+    @Autowired
+    private MealRepository mealRepository;
+
     private MealDto testMealDto;
+    private UUID realDishId;
 
     @BeforeEach
     void setup() {
-        testMealDto = new MealDto(
-                                  UUID.randomUUID(),
-                                  MealType.LUNCH,
-                                  LocalDateTime.now(),
-                                  Collections.singletonList(UUID.randomUUID())
-        );
+        mealRepository.deleteAll();
+        dishRepository.deleteAll();
+        recipeRepository.deleteAll();
+        ingredientRepository.deleteAll();
+        realDishId = createTestDish();
+
+        testMealDto = MealDto.builder()
+                .id(UUID.randomUUID())
+                .mealType(MealType.LUNCH)
+                .dateTime(LocalDateTime.now())
+                .dishes(List.of(DishDto.builder()
+                        .id(realDishId)
+                        .build()))
+                .build();
+    }
+
+    private UUID createTestDish() {
+        Ingredient ingredient = Ingredient.builder()
+                .name("Test Ingredient")
+                .quantity(100.0)
+                .unit("grams")
+                .calories(50.0)
+                .protein(5.0)
+                .fat(2.0)
+                .carbohydrates(8.0)
+                .expirationDate(LocalDate.now()
+                        .plusDays(7))
+                .build();
+        ingredient = ingredientRepository.save(ingredient);
+
+        Recipe recipe = Recipe.builder()
+                .name("Test Recipe")
+                .cookingTimeMinutes(30)
+                .instructions("Test instructions")
+                .dishes(new ArrayList<>())
+                .build();
+        recipe = recipeRepository.save(recipe);
+
+        Dish dish = Dish.builder()
+                .name("Test Dish")
+                .calories(100)
+                .protein(10)
+                .fat(5)
+                .carbohydrates(12)
+                .preparedAt(LocalDateTime.now())
+                .ingredients(List.of(ingredient))
+                .recipes(List.of(recipe))
+                .build();
+        dish = dishRepository.save(dish);
+
+        return dish.getId();
     }
 
     // POST /api/meals - success
@@ -57,8 +127,7 @@ public class MealDtoControllerTests {
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(testMealDto)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(testMealDto.getId()
-                        .toString()))
+                .andExpect(jsonPath("$.id").exists())
                 .andExpect(jsonPath("$.mealType").value("LUNCH"));
     }
 
@@ -90,14 +159,19 @@ public class MealDtoControllerTests {
     // GET /api/meals/{id} - success
     @Test
     void getMealById_success() throws Exception {
-        mockMvc.perform(post("/api/meals")
+        MvcResult result = mockMvc.perform(post("/api/meals")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(testMealDto)))
-                .andExpect(status().isOk());
-
-        mockMvc.perform(get("/api/meals/" + testMealDto.getId()))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(testMealDto.getId()
+                .andReturn();
+
+        String responseContent = result.getResponse()
+                .getContentAsString();
+        MealDto createdMeal = objectMapper.readValue(responseContent, MealDto.class);
+
+        mockMvc.perform(get("/api/meals/" + createdMeal.getId()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(createdMeal.getId()
                         .toString()));
     }
 
@@ -113,16 +187,21 @@ public class MealDtoControllerTests {
     // PUT /api/meals/{id} - success
     @Test
     void updateMeal_success() throws Exception {
-        mockMvc.perform(post("/api/meals")
+        MvcResult result = mockMvc.perform(post("/api/meals")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(testMealDto)))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andReturn();
 
-        testMealDto.setMealType(MealType.DINNER);
+        String responseContent = result.getResponse()
+                .getContentAsString();
+        MealDto createdMeal = objectMapper.readValue(responseContent, MealDto.class);
 
-        mockMvc.perform(put("/api/meals/" + testMealDto.getId())
+        createdMeal.setMealType(MealType.DINNER);
+
+        mockMvc.perform(put("/api/meals/" + createdMeal.getId())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(testMealDto)))
+                .content(objectMapper.writeValueAsString(createdMeal)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.mealType").value("DINNER"));
     }
@@ -141,12 +220,17 @@ public class MealDtoControllerTests {
     // DELETE /api/meals/{id} - success
     @Test
     void deleteMeal_success() throws Exception {
-        mockMvc.perform(post("/api/meals")
+        MvcResult result = mockMvc.perform(post("/api/meals")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(testMealDto)))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andReturn();
 
-        mockMvc.perform(delete("/api/meals/" + testMealDto.getId()))
+        String responseContent = result.getResponse()
+                .getContentAsString();
+        MealDto createdMeal = objectMapper.readValue(responseContent, MealDto.class);
+
+        mockMvc.perform(delete("/api/meals/" + createdMeal.getId()))
                 .andExpect(status().isOk());
     }
 
